# image-viewer

./: .clippy.toml  .codecov.yml  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  FUNCTION_COMPARE.md  LICENSE  PRD_CHECK.md  README.md  README.zh-CN.md  config.example.toml  rustfmt.toml  tarpaulin.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  coverage.yml  release.yml  test.yml
docs/: ARCHITECTURE.md  BRANCH_PROTECTION.md  BUILD.md  DEVELOPMENT.md  PRD.md  STANDARDS.md  TEST_PLAN.md  UI_SPEC.md  USAGE.md  v0.4.0-roadmap.md
install/: INSTALL.md
install/linux/: install.sh  oas-image-viewer.desktop  uninstall.sh
install/macos/: Info.plist  install.sh
install/windows/: README.md  install.bat  register-context-menu-win10-win11.reg  register-context-menu.bat  unregister-context-menu.bat  unregister-context-menu.reg  untest.reg
locales/: en-US.json  zh-CN.json
src/: clipboard.rs  config.rs  info_panel.rs  lib.rs  main.rs  shortcuts_help.rs
src/adapters/: clipboard.rs  mod.rs
src/adapters/egui/: app.rs  i18n.rs  info_panel.rs  mod.rs  shortcuts_help.rs  thumbnail_loader.rs
src/adapters/system_integration/: mod.rs  platform.rs
src/app/: mod.rs
src/clipboard/: mod.rs
src/core/: mod.rs
src/core/domain/: errors.rs  language.rs  mod.rs  types.rs
src/core/ports/: mod.rs
src/decoder/: mod.rs
src/dnd/: mod.rs
src/gallery/: mod.rs
src/infrastructure/: mod.rs
src/utils/: errors.rs  mod.rs  threading.rs
src/viewer/: mod.rs
tests/: decoder_test.rs  dnd_integration_test.rs  dnd_more_test.rs
wix/: main.wxs
(+12 files in other folders)
