[package]
name = "image-viewer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern image viewer built with Rust and egui"
license = "MIT"
repository = "https://github.com/yourusername/image-viewer"
keywords = ["image", "viewer", "gui", "egui"]
categories = ["graphics", "multimedia::images"]
rust-version = "1.70"

[dependencies]
# GUI framework
eframe = { version = "0.24", features = ["default"] }
egui = "0.24"

# Image decoding
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "tiff",
    "bmp",
] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# System directories
directories = "5.0"

# Utility
parking_lot = "0.12"
rayon = "1.8"

[dev-dependencies]
# Testing
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
debug = true
